--- a/grafana/config.json
+++ b/grafana/config.json
@@ -4,7 +4,7 @@
   "slug": "grafana",
   "description": "The open platform for beautiful analytics and monitoring",
   "url": "https://github.com/hassio-addons/addon-grafana",
-  "startup": "services",
+  "startup": "system",
   "ingress": true,
   "ingress_port": 1337,
   "panel_icon": "mdi:chart-timeline",
