--- a/portainer/config.json
+++ b/portainer/config.json
@@ -25,7 +25,7 @@
     "9000/tcp": 9000
   },
   "ports_description": {
-    "8000/tcp": "Edge Agent Api (Enable when managing remote edge agents)"
+    "8000/tcp": "Edge Agent Api (Enable when managing remote edge agents)",
     "9000/tcp": "Web Agent UI"
   },
   "boot": "auto",
