--- a/portainer/config.json
+++ b/portainer/config.json
@@ -2,10 +2,10 @@
   "name": "Portainer",
   "version": "1.2.2",
   "slug": "portainer",
-  "description": "Manage your Docker environment with ease",
-  "url": "https://github.com/hassio-addons/addon-portainer",
+  "description": "Manage your Docker environment with ease...",
+  "url": "https://github.com/devnatiomemoriae/addon-portainer",
   "advanced": true,
-  "ingress": true,
+  "ingress": false,
   "ingress_port": 1337,
   "startup": "services",
   "panel_icon": "mdi:docker",
