--- a/portainer/config.json
+++ b/portainer/config.json
@@ -4,9 +4,8 @@
   "slug": "portainer",
   "description": "Manage your Docker environment with ease...",
   "url": "https://github.com/devnatiomemoriae/addon-portainer",
-  "advanced": true,
+  "advanced": false,
   "ingress": false,
-  "ingress_port": 1337,
   "startup": "services",
   "panel_icon": "mdi:docker",
   "homeassistant": "0.92.0b2",
@@ -22,7 +21,7 @@
   ],
   "ports": {
     "8000/tcp": null,
-    "9000/tcp": 9000
+    "9000/tcp": 9001
   },
   "ports_description": {
     "8000/tcp": "Edge Agent Api (Enable when managing remote edge agents)",
