--- a/portainer/config.json
+++ b/portainer/config.json
@@ -21,7 +21,7 @@
   ],
   "ports": {
     "8000/tcp": null,
-    "9000/tcp": 9002
+    "9000/tcp": 9001
   },
   "ports_description": {
     "8000/tcp": "Edge Agent Api (Enable when managing remote edge agents)",
@@ -36,5 +36,5 @@
     "log_level": "list(trace|debug|info|notice|warning|error|fatal)?",
     "agent_secret": "str?"
   },
-  "image": "hassioaddons/portainer-{arch}"
+  "image": "portainer/portainer-ce"
 }
