--- a/portainer/config.json
+++ b/portainer/config.json
@@ -36,5 +36,5 @@
     "log_level": "list(trace|debug|info|notice|warning|error|fatal)?",
     "agent_secret": "str?"
   },
-  "image": "portainer/portainer-ce"
+  "image": "hassioaddons/portainer-{arch}"
 }
