--- a/portainer/config.json
+++ b/portainer/config.json
@@ -1,7 +1,7 @@
 {
   "name": "PortainerX",
   "version": "1.2.2",
-  "slug": "portainer",
+  "slug": "portainerx",
   "description": "Manage your Docker environment with ease (with Web UI)",
   "url": "https://github.com/devnatiomemoriae/addon-portainer",
   "advanced": false,
