--- a/portainer/config.json
+++ b/portainer/config.json
@@ -35,6 +35,6 @@
   "schema": {
     "log_level": "list(trace|debug|info|notice|warning|error|fatal)?",
     "agent_secret": "str?"
-  },
-  "image": "localhost:5000/pox"
+  },  
+  "image": "hassioaddons/portainer-{arch}"
 }
