--- a/portainer/config.json
+++ b/portainer/config.json
@@ -1,40 +1,48 @@
 {
   "name": "PortainerX",
-  "version": "1.2.2",
+  "version": "dev",
   "slug": "portainerx",
-  "description": "Manage your Docker environment with ease (with Web UI)",
+  "description": "Manage your Docker environment with ease and freedom",
   "url": "https://github.com/devnatiomemoriae/addon-portainer",
-  "advanced": false,
-  "ingress": false,
+  "webui": "[PROTO:ssl]://[HOST]:[PORT:9000]",
+  "ingress": true,
+  "ingress_port": 1337,
   "startup": "services",
-  "panel_icon": "mdi:docker",
-  "homeassistant": "0.92.0b2",
   "arch": [
     "aarch64",
     "amd64",
     "armhf",
     "armv7"
   ],
-  "init": false,
   "map": [
+    "config",
     "ssl"
   ],
   "ports": {
-    "8000/tcp": null,
-    "9000/tcp": 9000
+    "80/tcp": null
   },
   "ports_description": {
-    "8000/tcp": "Edge Agent Api (Enable when managing remote edge agents)",
-    "9000/tcp": "Web Agent UI"
+    "80/tcp": "Web interface (Not required for Hass.io Ingress)"
   },
   "boot": "auto",
   "hassio_api": true,
   "hassio_role": "default",
+  "auth_api": true,
   "docker_api": true,
-  "options": {},
+  "options": {
+    "ssl": true,
+    "certfile": "fullchain.pem",
+    "keyfile": "privkey.pem",
+    "hide_hassio_containers": false
+    "keyfile": "privkey.pem"
+  },
   "schema": {
-    "log_level": "list(trace|debug|info|notice|warning|error|fatal)?",
-    "agent_secret": "str?"
-  },  
+    "log_level": "match(^(trace|debug|info|notice|warning|error|fatal)$)?",
+    "ssl": "bool",
+    "certfile": "str",
+    "keyfile": "str",
+    "hide_hassio_containers": "bool",
+    "leave_front_door_open": "bool?"
+  } 
   "image": "hassioaddons/portainer-{arch}"
 }
