--- a/portainer/config.json
+++ b/portainer/config.json
@@ -33,8 +33,7 @@
     "ssl": true,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
-    "hide_hassio_containers": false,
-    "keyfile": "privkey.pem"
+    "hide_hassio_containers": false
   },
   "schema": {
     "log_level": "match(^(trace|debug|info|notice|warning|error|fatal)$)?",
