--- a/portainer/config.json
+++ b/portainer/config.json
@@ -43,5 +43,5 @@
     "hide_hassio_containers": "bool",
     "leave_front_door_open": "bool?"
   }, 
-  "image": "localhost:5000/pox"
+  "image": "hassioaddons/portainer-{arch}"
 }
