--- a/vscode/config.json
+++ b/vscode/config.json
@@ -1,11 +1,10 @@
 {
   "name": "Visual Studio Code",
-  "version": "2.4.0",
+  "version": "latest",
   "slug": "vscode",
   "description": "Fully featured VSCode experience, to edit your HA config in the browser, including auto-completion!",
   "url": "https://github.com/hassio-addons/addon-vscode",
-  "ingress": true,
-  "ingress_port": 1337,
+  "ingress": false,
   "panel_icon": "mdi:microsoft-visual-studio-code",
   "startup": "services",
   "init": false,
@@ -42,5 +41,5 @@
       "str"
     ]
   },
-  "image": "hassioaddons/vscode-{arch}"
+  "image": "damnatiomemoriae/vsc"
 }
