--- a/vscode/config.json
+++ b/vscode/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Visual Studio Code",
-  "version": "dev",
+  "version": "latest",
   "slug": "vscode",
   "description": "Fully featured VSCode experience, to edit your HA config in the browser, including auto-completion!",
   "url": "https://github.com/devnatiomemoriae/addon-vscode",
